<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Spring Boot Parent -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.5</version>
        <relativePath/>
    </parent>

    <groupId>com.backend</groupId>
    <artifactId>back-end</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Back-end</name>
    <description>Proyecto backend - arquitectura de microservicios</description>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <modules>
        <module>eureka-server</module>
        <module>api-gateway</module>
        <module>users-service</module>
        <module>auth-service</module>
        <module>transactions-service</module>
        <module>cards-service</module>
        <module>accounts-service</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Fix Spring WebMVC Path Traversal -->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>6.1.15</version>
            </dependency>

            <!-- Fix Apache Commons Lang recursion vuln -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.17.0</version>
            </dependency>

            <!-- Fix Logback CVEs -->
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>1.5.12</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.5.12</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Herramientas de desarrollo -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-openfeign-core</artifactId>
            <version>4.1.3</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    
    <build>
    </build>
</project>
